plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'tiggle'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger 
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // Email Verification
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // 쿨에스엠에스
    implementation 'net.nurigo:sdk:4.3.1'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Spring Security for password hashing
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Spring Boot DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Firebase Admin SDK
    implementation 'com.google.firebase:firebase-admin:9.4.1'

    // Jsoup for HTML parsing
    implementation 'org.jsoup:jsoup:1.17.2'


}

tasks.named('test') {
    useJUnitPlatform()
}
